media-arr-books/deployment-books-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-bot
  namespace: media
  labels:
    app: books-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-bot
  template:
    metadata:
      labels:
        app: books-bot
    spec:
      nodeSelector:
        media-node: "true"
      containers:
        - name: books-bot
          image: harbor.finalq.xyz/tools/books-bot:v3.2.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: biblioteca-data
              mountPath: /data
      volumes:
        - name: biblioteca-data
          persistentVolumeClaim:
            claimName: biblioteca-secreta-nfs
