media-arr-books/deployment-lazylibrarian.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
  namespace: media
  labels:
    app: lazylibrarian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazylibrarian
  template:
    metadata:
      labels:
        app: lazylibrarian
    spec:
      nodeSelector:
        media-node: "true"
      securityContext:
        fsGroup: 1000
      containers:
        - name: lazylibrarian
          image: harbor.finalq.xyz/tools/lazylibrarian:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5299
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: books
              mountPath: /books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lazylibrarian-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-nfs
        - name: books
          persistentVolumeClaim:
            claimName: books-nfs
