media-arr-books/deployment-meili.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: media
  labels:
    app: meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      nodeSelector:
        media-node: "true"
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.12
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7700
          volumeMounts:
            - name: data
              mountPath: /meili_data
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 4
              memory: 4Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: meili-data
