media-arr-books/service-biblioteca-secreta-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblioteca-secreta-web
  namespace: media
spec:
  selector:
    app: biblioteca-secreta-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
