media-arr-books/service-books-bot.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-bot
  namespace: media
spec:
  selector:
    app: books-bot
  ports:
    - name: http
      port: 8080
      targetPort: 8080
