media-arr-books/service-lazylibrarian.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  namespace: media
spec:
  selector:
    app: lazylibrarian
  ports:
    - name: http
      port: 5299
      targetPort: 5299
