media-arr-books/service-meili.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: media
spec:
  selector:
    app: meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: 7700
