media-arr-books/service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: NodePort
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      nodePort: 30696
