media-arr-books/service-readarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
spec:
  selector:
    app: readarr
  ports:
    - name: http
      port: 8787
      targetPort: 8787
