media-arr-books/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-arr-books
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: books.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lazylibrarian
                port:
                  number: 5299

    - host: prowlarr.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696

    - host: qbittorrent.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080

    - host: biblioteca.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblioteca-secreta-web
                port:
                  number: 8080
